--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,9 +1,54 @@
-.back{
-    background-image: url("../img/jesus.png");
-    /* background-color: orange; */
-    width: 600px;
-    height:500px;
+.titulo{
+    /* padding-top:160px; */
+    color:orange;
+    font-size: 50px;
+    font-style: animationplay-state;
+    font-family: armenian;
+    text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 9px lightblue ;
+} 
+/*! suit-flex-embed v1.4.0 | MIT License | github.com/suitcss */
+
+.FlexEmbed {
+  display: block;
+  overflow: hidden;
+  position: relative;
 }
+
+.FlexEmbed:before {
+  content: "";
+  display: block;
+  width: 100%;
+  height:100%;
+}
+
+.FlexEmbed--2by0:before {
+  padding-bottom: 23%;
+}
+.FlexEmbed--3by1:before {
+  padding-bottom: 33.33333%;
+}
+
+.FlexEmbed--2by1:before {
+  padding-bottom: 50%;
+}
+
+.FlexEmbed--16by9:before {
+  padding-bottom: 56.25%;
+}
+
+.FlexEmbed--4by3:before {
+  padding-bottom: 75%;
+}
+
+.CoverImage {
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 0 auto 1em;
+  max-height: 900px;
+  max-width: 600px;
+}
+
 .success{
     color: #3c763d;
     background-color: #dff0d8;
