--- a/www/css/style.css
+++ b/www/css/style.css
@@ -70,6 +70,7 @@
 a{                                    
     text-decoration:none;
 }
+/*
 .btny{
     border: 1px solid transparent;
     padding: 3px;
@@ -80,6 +81,29 @@ a{
     background-color: #d9edf7;
 }
 
-.center{
-  text-align: center;
+.myinbox{
+  height: 25px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+  -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+       -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+          transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
+.ui-input-text{
+  border: 1px solid blue;
+  box-shadow: 0 5px 8px blue, 1 3px 5px blue;
+}
+.mbox{
+  display: block;
+  width: 100%;
+  box-shadow: 0 5px 8px blue, 1 3px 5px blue;
+}
+*/
